# OmniView

./: .env  .gitignore  Dockerfile  docker-compose.yml  implementation_guide.md  langgraph.json  main.py  man-in-the-loop.md  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/application/agents/: email_analyzer_agent_builder.py
app/application/agents/agent_builder/: email_analyzer_agent_builder.py  routers.py
app/application/agents/agent_builder/edge_config/: edge_configurator.py
app/application/agents/agent_builder/node_config/: node_configurator.py
app/application/agents/node_functions/: email_processing_action_items_node.py  email_processing_categorize_node.py  email_processing_summarize_node.py
app/application/agents/node_functions/classify_node/: classify_node.py
app/application/agents/node_functions/format_template_node/: format_template_node.py
app/application/agents/state/: email_analysis_state.py
app/application/agents/tools/: calculator_tool.py  delta_api_tool.py  get_contract_tool.py  planner_api_tool.py  update_tasks_state.py
app/application/interfaces/: illm_service.py
app/application/services/: email_service.py
app/domain/: delta_task.py  email.py  person.py  planner_task.py  task.py
app/infrastructure/config/: config.py
app/infrastructure/services/llm/: llm_factory.py  openai_service.py
app/logs/emails/: email_data_20250611_120631.json
app/presentation/graphMicrosoft/: routers.py
(+5 files in other folders)
